@@ -114,3 +114,32 @@ ACTOR HealthBonusDSparil : HealthBonus
 {
   Inventory.MaxAmount 150
 }
+
+actor MegaPack2 : MegaPack replaces MegaPack
+{
+  States
+  {
+      Pickup:
+	    TNT1 A 0 A_JumpIfInventory("HitlerClass", 1, "PickupHitler")
+        TNT1 A 0 A_JumpIfInventory("CorvusClass", 1, "PickupCorvus")
+        TNT1 A 0 A_JumpIfInventory("MarathonClass", 1, "PickupMarathon")
+        TNT1 A 0 A_JumpIfInventory("QuakeClass", 1, "PickupQuake")
+        TNT1 A 0 A_PlaySound("megapackpickup", CHAN_ITEM)
+
+        TNT1 A 0 ACS_ExecuteWithResult(SAMSARA_DECORATE, 20, ARMOR_BLUE_WITHYELLOW)
+        TNT1 A 0 A_JumpIf(ACS_ExecuteWithResult(SAMSARA_DECORATE, 22), "Infinite")
+        TNT1 A 0 A_GiveInventory("FiniteHealth200", 200)
+        stop
+		
+	  PickupHitler:
+        TNT1 A 0 A_PlaySound("megapackpickup", CHAN_ITEM)
+
+        TNT1 A 0 A_GiveInventory("HitlerLMSArmor1",1)
+		TNT1 A 0 ACS_ExecuteAlways(897,0,2,0,0)
+		TNT1 A 0 A_TakeInventory("HitlerLostArmor",1)
+        TNT1 A 0 A_JumpIf(ACS_ExecuteWithResult(SAMSARA_DECORATE, 22), "Infinite")
+        TNT1 A 0 A_GiveInventory("FiniteHealth200", 200)
+        stop
+  }
+}
+		//TNT1 A 0 
