@@ -24,7 +24,8 @@ FROM V0.11 TO V0.12:
 - By popular request, there is now a Mana Jewel at the bottom of Korax's HUD, indicating what weapon is equipped by color association.
 - Heroes and Villains can now work side by side in co-op without getting stuck on each other.
 - Minions no longer bring Invasion to a screeching halt.
-- Up to seven Pfhor Troopers can now be summoned. Their max damage range has been decreased from 15 to 10.
+- Up to seven Pfhor Troopers can now be summoned. Their max damage range has been decreased from 15 to 10, and their accuracy decreased.\n\
+- Hitler, the Villain of B.J. Blazkowicz, has been added!
 
 FROM V0.1 TO V0.11:
 ========================
